<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Playscription</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_error">\ Invalid username or password\</string>
    <string name="title_activity_signup">Create an account</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Verify Password</string>
    <string name="progress_login">Logging you in…</string>
    <string name="progress_signup">Creating account...…</string>
    <string name="signup">Create account</string>
    <string name="patient_name">patient name</string>
    <string name="current_height">current height</string>
    <string name="starting_weight">starting weight</string>
    <string name="patient_age">patient age</string>
    <string name="date_of_birth">date of birth</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="title_section1">dashboard</string>
    <string name="title_section2">user settings</string>
    <string name="title_section3">manage account</string>
    <string name="title_section4">messages</string>
    <string name="title_section5">app settings</string>
    <string name="title_section6">help</string>
    <string name="title_section7">log out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="current_prescriptions">current prescriptions</string>
    <string name="title_activity_enter_playscription">EnterPlayscriptionActivity</string>
    <string name="enter_playscription_code">enter playscription code</string>
    <string name="activity_type">activity type</string>
    <string name="duration">duration</string>
    <string name="frequency">frequency</string>
    <string name="or">OR</string>
    <string name="give_daily_reminders">give daily reminders</string>


</resources>
