<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/white"
    tools:context=".EnterPlayScriptionActivity">

    <EditText
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:id="@+id/playscription_code"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:hint="@string/enter_playscription_code"
        android:background="@drawable/textbox_background"
        android:gravity="center"/>

    <TextView
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:id="@+id/or"
        android:text= "@string/or"
        android:layout_below="@+id/playscription_code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textSize="30dp"
        android:gravity="center"/>

    <EditText
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:id="@+id/activity_type"
        android:layout_below="@+id/or"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/activity_type"
        android:background="@drawable/textbox_background"
        android:gravity="center"/>

    <EditText
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:id="@+id/duration"
        android:layout_below="@+id/activity_type"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/duration"
        android:background="@drawable/textbox_background"
        android:gravity="center"/>

    <EditText
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:id="@+id/frequency"
        android:layout_below="@+id/duration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/frequency"
        android:background="@drawable/textbox_background"
        android:gravity="center"/>

    <CheckBox
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:id="@+id/checkbox"
        android:layout_below="@+id/frequency"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/give_daily_reminders"
        android:gravity="center"
        android:onClick="onCheckboxClicked"/>


    <Button
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:id="@+id/submit_playscription"
        android:layout_below="@+id/checkbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/done_button"
        android:onClick=""
        style="?android:attr/borderlessButtonStyle"/>
</RelativeLayout>
