<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/white"
    tools:context=".UserPersonalInfoActivity">

    <EditText
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:hint="@string/patient_name"
        android:background="@drawable/textbox_background"
        android:gravity="center"/>

    <EditText
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/current_height"
        android:background="@drawable/textbox_background"
        android:gravity="center"/>

    <EditText
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:id="@+id/editText3"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/starting_weight"
        android:background="@drawable/textbox_background"
        android:gravity="center"/>

    <EditText
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:id="@+id/editText4"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/patient_age"
        android:background="@drawable/textbox_background"
        android:gravity="center"/>

    <EditText
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:id="@+id/editText5"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/date_of_birth"
        android:background="@drawable/textbox_background"
        android:gravity="center"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:id="@+id/button"
        android:layout_below="@+id/editText5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/done_button"
        android:onClick=""
        style="?android:attr/borderlessButtonStyle"/>
</RelativeLayout>
